// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When registering, deactivating, and reactivating a user as a community admin As a community admin again should fail to deactivate the other community user 1`] = `[Error: GraphQL Error: Community administrators can only deactivate users in their community]`;

exports[`When registering, deactivating, and reactivating a user as a community admin As a community admin once more should reactivate the user 1`] = `
Object {
  "reactivateUser": Object {
    "user": Object {
      "active": true,
      "firstName": "New",
      "lastName": "User",
    },
  },
}
`;

exports[`When registering, deactivating, and reactivating a user as a community admin As the new other community user again should get the correct current user 1`] = `
Object {
  "currentUser": Object {
    "firstName": "New",
    "lastName": "User",
  },
}
`;

exports[`When registering, deactivating, and reactivating a user as a community admin As the new other community user should get the correct current user 1`] = `"New"`;

exports[`When registering, deactivating, and reactivating a user as a community admin As the new user should get the correct current user 1`] = `"New"`;

exports[`When registering, deactivating, and reactivating a user as a community admin As the reactivated user should get the correct current user 1`] = `
Object {
  "currentUser": Object {
    "firstName": "New",
    "lastName": "User",
  },
}
`;

exports[`When registering, deactivating, and reactivating a user as a community admin should see the other community user is active 1`] = `
Object {
  "userById": Object {
    "active": true,
    "firstName": "New",
    "lastName": "User",
  },
}
`;

exports[`When registering, deactivating, and reactivating a user as a community admin should see the user is deactivated 1`] = `
Object {
  "userById": Object {
    "active": false,
    "firstName": "New",
    "lastName": "User",
  },
}
`;
